--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       * {
         padding: 0;
         margin: 0;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
       }
     </style>
-    <title>React App</title>
+    <title>Koyarr</title>
   </head>
   <body>
     <div id="root"></div>
