--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/default-passive-events"
+    ></script>
   </body>
 </html>
